Update controller etc to added admin api
