# gen/http/admin/server/paths.go
@@ -1,0 +1,18 @@
+// Code generated by goa v3.0.4, DO NOT EDIT.
+//
+// HTTP request path constructors for the Admin service.
+//
+// Command:
+// $ goa gen github.com/tonouchi510/Jeeek/design
+
+package server
+
+// AdminHealthCheckAdminPath returns the URL path to the Admin service admin health-check HTTP endpoint.
+func AdminHealthCheckAdminPath() string {
+	return "/v1/admin/healthcheck"
+}
+
+// AdminSigninAdminPath returns the URL path to the Admin service admin signin HTTP endpoint.
+func AdminSigninAdminPath() string {
+	return "/v1/admin/signin"
+}
