# gen/http/admin/server/server.go
@@ -1,0 +1,178 @@
+// Code generated by goa v3.0.4, DO NOT EDIT.
+//
+// Admin HTTP server
+//
+// Command:
+// $ goa gen github.com/tonouchi510/Jeeek/design
+
+package server
+
+import (
+	"context"
+	"net/http"
+
+	admin "github.com/tonouchi510/Jeeek/gen/admin"
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Server lists the Admin service endpoint HTTP handlers.
+type Server struct {
+	Mounts           []*MountPoint
+	AdminHealthCheck http.Handler
+	AdminSignin      http.Handler
+}
+
+// ErrorNamer is an interface implemented by generated error structs that
+// exposes the name of the error as defined in the design.
+type ErrorNamer interface {
+	ErrorName() string
+}
+
+// MountPoint holds information about the mounted endpoints.
+type MountPoint struct {
+	// Method is the name of the service method served by the mounted HTTP handler.
+	Method string
+	// Verb is the HTTP method used to match requests to the mounted handler.
+	Verb string
+	// Pattern is the HTTP request path pattern used to match requests to the
+	// mounted handler.
+	Pattern string
+}
+
+// New instantiates HTTP handlers for all the Admin service endpoints.
+func New(
+	e *admin.Endpoints,
+	mux goahttp.Muxer,
+	dec func(*http.Request) goahttp.Decoder,
+	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	eh func(context.Context, http.ResponseWriter, error),
+) *Server {
+	return &Server{
+		Mounts: []*MountPoint{
+			{"AdminHealthCheck", "GET", "/v1/admin/healthcheck"},
+			{"AdminSignin", "POST", "/v1/admin/signin"},
+		},
+		AdminHealthCheck: NewAdminHealthCheckHandler(e.AdminHealthCheck, mux, dec, enc, eh),
+		AdminSignin:      NewAdminSigninHandler(e.AdminSignin, mux, dec, enc, eh),
+	}
+}
+
+// Service returns the name of the service served.
+func (s *Server) Service() string { return "Admin" }
+
+// Use wraps the server handlers with the given middleware.
+func (s *Server) Use(m func(http.Handler) http.Handler) {
+	s.AdminHealthCheck = m(s.AdminHealthCheck)
+	s.AdminSignin = m(s.AdminSignin)
+}
+
+// Mount configures the mux to serve the Admin endpoints.
+func Mount(mux goahttp.Muxer, h *Server) {
+	MountAdminHealthCheckHandler(mux, h.AdminHealthCheck)
+	MountAdminSigninHandler(mux, h.AdminSignin)
+}
+
+// MountAdminHealthCheckHandler configures the mux to serve the "Admin" service
+// "admin health-check" endpoint.
+func MountAdminHealthCheckHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/v1/admin/healthcheck", f)
+}
+
+// NewAdminHealthCheckHandler creates a HTTP handler which loads the HTTP
+// request and calls the "Admin" service "admin health-check" endpoint.
+func NewAdminHealthCheckHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	dec func(*http.Request) goahttp.Decoder,
+	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	eh func(context.Context, http.ResponseWriter, error),
+) http.Handler {
+	var (
+		decodeRequest  = DecodeAdminHealthCheckRequest(mux, dec)
+		encodeResponse = EncodeAdminHealthCheckResponse(enc)
+		encodeError    = EncodeAdminHealthCheckError(enc)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "admin health-check")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "Admin")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				eh(ctx, w, err)
+			}
+			return
+		}
+
+		res, err := endpoint(ctx, payload)
+
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				eh(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			eh(ctx, w, err)
+		}
+	})
+}
+
+// MountAdminSigninHandler configures the mux to serve the "Admin" service
+// "admin signin" endpoint.
+func MountAdminSigninHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/v1/admin/signin", f)
+}
+
+// NewAdminSigninHandler creates a HTTP handler which loads the HTTP request
+// and calls the "Admin" service "admin signin" endpoint.
+func NewAdminSigninHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	dec func(*http.Request) goahttp.Decoder,
+	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	eh func(context.Context, http.ResponseWriter, error),
+) http.Handler {
+	var (
+		decodeRequest  = DecodeAdminSigninRequest(mux, dec)
+		encodeResponse = EncodeAdminSigninResponse(enc)
+		encodeError    = EncodeAdminSigninError(enc)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "admin signin")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "Admin")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				eh(ctx, w, err)
+			}
+			return
+		}
+
+		res, err := endpoint(ctx, payload)
+
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				eh(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			eh(ctx, w, err)
+		}
+	})
+}
